--- a/mac/.skhdrc
+++ b/mac/.skhdrc
@@ -115,10 +115,10 @@ alt - j : yabai -m window --focus south
 alt - k : yabai -m window --focus north
 alt - l : yabai -m window --focus east
 
-alt - left : yabai -m window --focus west
-alt - down : yabai -m window --focus south
-alt - up : yabai -m window --focus north
-alt - right : yabai -m window --focus east
+#alt - left : yabai -m window --focus west
+#alt - down : yabai -m window --focus south
+#alt - up : yabai -m window --focus north
+#alt - right : yabai -m window --focus east
 
 
 # Moving windows
@@ -127,10 +127,10 @@ shift + alt - j : yabai -m window --warp south
 shift + alt - k : yabai -m window --warp north
 shift + alt - l : yabai -m window --warp east
 
-shift + alt - left : yabai -m window --warp west
-shift + alt - down : yabai -m window --warp south
-shift + alt - up : yabai -m window --warp north
-shift + alt - right : yabai -m window --warp east
+#shift + alt - left : yabai -m window --warp west
+#shift + alt - down : yabai -m window --warp south
+#shift + alt - up : yabai -m window --warp north
+#shift + alt - right : yabai -m window --warp east
 
 # Move focus container to workspace
 shift + alt - m : yabai -m window --space last && yabai -m space --focus last
@@ -142,6 +142,10 @@ shift + alt - 3 : yabai -m window --space 3 && yabai -m space --focus 3
 shift + alt - 4 : yabai -m window --space 4 && yabai -m space --focus 4
 shift + alt - 5 : yabai -m window --space 5 && yabai -m space --focus 5
 shift + alt - 6 : yabai -m window --space 6 && yabai -m space --focus 6
+shift + alt - 7 : yabai -m window --space 6 && yabai -m space --focus 7
+shift + alt - 8 : yabai -m window --space 6 && yabai -m space --focus 8
+shift + alt - 9 : yabai -m window --space 6 && yabai -m space --focus 9
+shift + alt - 0 : yabai -m window --space 6 && yabai -m space --focus 10
 
 cmd + alt + ctrl - up: yabai -m space --focus last
 cmd + alt + ctrl - down: yabai -m space --focus first
@@ -153,6 +157,10 @@ fn - 3 : yabai -m space --focus 3
 fn - 4 : yabai -m space --focus 4
 fn - 5 : yabai -m space --focus 5
 fn - 6 : yabai -m space --focus 6
+fn - 7 : yabai -m space --focus 7
+fn - 8 : yabai -m space --focus 8
+fn - 9 : yabai -m space --focus 9
+fn - 0 : yabai -m space --focus 10
 
 # Resize windows
 lctrl + alt - h : \
