--- a/mac/.skhdrc
+++ b/mac/.skhdrc
@@ -226,6 +226,7 @@ shift + lctrl + alt - right : yabai -m window --insert east
 
 # Float / Unfloat window
 shift + alt - space : yabai -m window --toggle float
+shift + lctrl + alt - f : yabai -m window --toggle float
 
 # Restart Yabai
 #shift + lctrl + alt - r : 
