--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -626,6 +626,58 @@ hide_window_decorations yes
 
 #: Color scheme {{{
 
+# BEGIN GRUVBOX SCHEME
+background #282828
+foreground #d4be98
+
+selection_background #d4be98
+selection_foreground #282828
+
+cursor #a89984
+cursor_text_color background
+
+active_tab_background #282828
+active_tab_foreground #d4be98
+active_tab_font_style bold
+inactive_tab_background #282828
+inactive_tab_foreground #a89984
+inactive_tab_font_style normal
+
+# Black
+color0 #665c54
+color8 #928374
+
+# Red
+color1 #ea6962
+color9 #fb4934
+
+# Green
+color2 #a9b665
+color10 #b8bb26
+
+# Yellow
+color3 #fe8019
+color11 #fabd2f
+
+# Blue
+color4 #458588
+color12 #83a598
+
+# Magenta
+color5 #b16286
+color13 #d3869b
+
+# Cyan
+color6 #689d6a
+color14 #8ec07c
+
+# White
+color7 #ebdbb2
+color15 #fbf1c7
+
+# END GRUVBOX SCHEME
+
+
 # foreground #dddddd
 # background #000000
 
@@ -1350,52 +1402,3 @@ map cmd+n      no_op
 
 # }}}
 
-
-
-background #282828
-foreground #d4be98
-
-selection_background #d4be98
-selection_foreground #282828
-
-cursor #a89984
-cursor_text_color background
-
-active_tab_background #282828
-active_tab_foreground #d4be98
-active_tab_font_style bold
-inactive_tab_background #282828
-inactive_tab_foreground #a89984
-inactive_tab_font_style normal
-
-# Black
-color0 #665c54
-color8 #928374
-
-# Red
-color1 #ea6962
-color9 #fb4934
-
-# Green
-color2 #a9b665
-color10 #b8bb26
-
-# Yellow
-color3 #fe8019
-color11 #fabd2f
-
-# Blue
-color4 #458588
-color12 #83a598
-
-# Magenta
-color5 #b16286
-color13 #d3869b
-
-# Cyan
-color6 #689d6a
-color14 #8ec07c
-
-# White
-color7 #ebdbb2
-color15 #fbf1c7
