--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -6,5 +6,8 @@
       "trace.server": "verbose",
       "filetypes": ["go"]
     }
-  }
+  },
+  "coc.preferences.formatOnSaveFiletypes": [
+    "dart"
+  ]
 }
