--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,17 +17,21 @@
 ;==========================================================
 
 [colors]
-background = #282a36
-background-alt = #44475a
-foreground = #f8f8f2
-comment = #6272A4
-cyan = #8be9fd
-green = #50fa7b
-orange = #ffb86c
-pink = #ff79c6
-purple = #bd93f9
-red = #ff5555
-yellow = #f1fa8c
+rosewater = #f4dbd6
+peach = #f5a97f
+green = #a6da95
+teal = #8bd5ca
+sky = #91d7e3
+sapphire = #7dc4e4
+blue = #8aaadf4
+lavender = #b7bdf8
+red = #ed8796
+maroon = #ee99a0
+mauve = #c6a0f6
+pink = #f5bde6
+flamingo = #f0c6c6
+background = #24273a
+background-alt = #494d64
 
 [bar/main]
 width = 100%
@@ -37,7 +41,7 @@ radius = 0
 ; dpi = 96
 
 background = ${colors.background}
-foreground = ${colors.foreground}
+foreground = ${colors.rosewater}
 
 line-size = 3pt
 
@@ -50,12 +54,13 @@ padding-right = 4
 module-margin = 1
 
 #separator = |
-#separator-foreground = ${colors.comment}
+#separator-foreground = ${colors.sky}
 
 font-0 = Hack Nerd Font Mono;2
+font-1 = FontAwesome:size=10
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio memory cpu wlan eth date
+modules-right = nowplaying filesystem pulseaudio memory cpu wlan eth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -64,9 +69,7 @@ enable-ipc = true
 
 ; tray-position = right
 
-; wm-restack = generic
 wm-restack = bspwm
-; wm-restack = i3
 
 ; override-redirect = true
 
@@ -75,7 +78,7 @@ type = internal/xworkspaces
 
 label-active = %name%
 label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.comment}
+label-active-underline= ${colors.peach}
 label-active-padding = 1
 
 label-occupied = %name%
@@ -100,6 +103,16 @@ interval = 3
 click-left = playerctl previous &
 click-right = playerctl next &
 click-middle = playerctl play-pause &
+label-foreground = ${colors.green}
+
+[module/nowplaying]
+type = custom/ipc
+hook-0 = ~/.config/polybar/scripts/player-mpris-simple.sh
+initial = 1
+click-left = playerctl previous &
+click-right = playerctl next &
+click-middle = playerctl play-pause &
+format-foreground = ${colors.green}
 
 [module/filesystem]
 type = internal/fs
@@ -107,66 +120,60 @@ interval = 25
 
 mount-0 = /
 
-label-mounted = %{F#ffb86c}%{F-} %percentage_used%%
+label-mounted =  %percentage_used%%
+label-mounted-foreground = ${colors.maroon}
 
-label-unmounted = %mountpoint% not mounted
+label-unmounted =  %mountpoint% not mounted
 label-unmounted-foreground = ${colors.background-alt}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "墳 "
-format-volume-prefix-foreground = ${colors.orange}
+format-volume-prefix = " "
+format-volume-prefix-foreground = ${colors.peach}
 format-volume = <label-volume>
+format-volume-foreground = ${colors.peach}
 
 label-volume = %percentage%%
 
-label-muted = "婢 muted"
+label-muted = " muted"
 label-muted-foreground = ${colors.background-alt}
-
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout = %{F#F0C674} %{F#707880}%layout%
-label-layout-foreground = ${colors.foreground}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.comment}
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = ""
-format-prefix-foreground = ${colors.orange}
+format-prefix = " "
+format-prefix-foreground = ${colors.teal}
 label = %percentage_used:2%%
+label-foreground = ${colors.teal}
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = ""
-format-prefix-foreground = ${colors.orange}
+format-prefix = "龍"
+format-prefix-foreground = ${colors.sky}
 label = %percentage:2%%
+label-foreground = ${colors.sky}
 
 [network-base]
 type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
+label-connected-foreground = ${colors.sapphire}
+label-disconnected-foreground = ${colors.lavender}
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#FFB86C}%{F-} %essid% %local_ip%
-label-disconnected = %{F#FFB86C}%{F-} Disconnected
+label-connected =  %essid% %local_ip%
+label-disconnected =  Disconnected
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#FFB86C}%{F-} %local_ip%
-label-disconnected = %{F#FFB86C}%{F-} Disconnected
+label-connected =  %local_ip%
+label-disconnected =  Disconnected
 
 [module/date]
 type = internal/date
@@ -175,12 +182,12 @@ interval = 1
 date = %H:%M
 date-alt = %Y-%m-%d %H:%M:%S
 
-label = %date%
-label-foreground = ${colors.foreground}
+label =  %date%
+label-foreground = ${colors.pink}
 
 [settings]
 screenchange-reload = true
-pseudo-transparency = true
+pseudo-transparency = false
 
 ; vim:ft=dosini
 
