--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -6,5 +6,46 @@
 
 config_version: 2
 settings:
+  bindings.commands:
+    global:
+      normal:
+        ',M': hint links spawn umpv {hint-url}
+        ',m': spawn umpv {url}
+        ;M: hint --rapid links spawn umpv {hint-url}
+  colors.webpage.darkmode.enabled:
+    global: true
+  colors.webpage.preferred_color_scheme:
+    global: dark
   content.notifications.enabled:
     https://www.reddit.com: false
+  editor.command:
+    global:
+    - alacritty
+    - -e
+    - nvim
+    - -f
+    - '{file}'
+    - -c
+    - normal {line}G{column0}l
+  fileselect.folder.command:
+    global:
+    - alacritty
+    - -e
+    - ranger
+    - --choosedir={}
+  fileselect.multiple_files.command:
+    global:
+    - alacritty
+    - -e
+    - ranger
+    - --choosefiles={}
+  fileselect.single_file.command:
+    global:
+    - alacritty
+    - -e
+    - ranger
+    - --choosefile={}
+  fonts.completion.category:
+    global: bold default_size default_family
+  fonts.hints:
+    global: bold default_size default_family
