--- a/mac/.yabairc
+++ b/mac/.yabairc
@@ -5,11 +5,11 @@ yabai -m signal --add event=dock_did_restart action="sudo yabai --load-sa"
 
 # ====== Variables =============================
 
-gaps_top="4"
-gaps_bottom="24"
-gaps_left="4"
-gaps_right="4"
-gaps_inner="4"
+gaps_top="0"
+gaps_bottom="0"
+gaps_left="0"
+gaps_right="0"
+gaps_inner="0"
 
 normal_border_color="8ec07c"
 focused_border_color="fabd2f"
@@ -24,6 +24,7 @@ yabai -m config bottom_padding              "${gaps_bottom}"
 yabai -m config left_padding                "${gaps_left}"
 yabai -m config right_padding               "${gaps_right}"
 yabai -m config window_gap                  "${gaps_inner}"
+yabai -m config window_border_radius        0
 
 yabai -m config mouse_follows_focus         off
 yabai -m config focus_follows_mouse         off
@@ -52,7 +53,7 @@ yabai -m config normal_window_border_color  "0xE0${normal_border_color}"
 # ====== List of rules =========================
 
 yabai -m rule --add label="Finder" app="^Finder$" title="(Co(py|nnect)|Move|Info|Pref)" manage=off
-yabai -m rule --add label="Safari" app="^Brave" title="^(General|(Tab|Password|Website|Extension)s|AutoFill|Se(arch|curity)|Privacy|Advance)$" manage=off
+yabai -m rule --add label="Brave" app="^Brave" title="^(General|(Tab|Password|Website|Extension)s|AutoFill|Se(arch|curity)|Privacy|Advance)$" manage=off
 yabai -m rule --add label="System Preferences" app="^System Preferences$" manage=off
 yabai -m rule --add label="App Store" app="^App Store$" manage=off
 yabai -m rule --add label="Activity Monitor" app="^Activity Monitor$" manage=off
@@ -69,7 +70,7 @@ yabai -m rule --add label="VirtualBox" app="^VirtualBox$" manage=off
 
 # Respect bar height
 # yabai -m config external_bar [<main|all|off>:<top_padding>:<bottom_padding>]
-yabai -m config external_bar all:34:-20
+yabai -m config external_bar all:28:0
 
 # Refresh spaces widget on space change
 yabai -m signal --add event=space_changed action="osascript -e 'tell application id \"tracesOf.Uebersicht\" to refresh widget id \"simple-bar-spaces-jsx\"'"
