[Mac] Remove fish config from dotfiles for now

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -8,6 +8,10 @@
     }
   },
   "coc.preferences.formatOnSaveFiletypes": [
-    "dart"
+    "dart",
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
   ]
 }
