--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".config/qutebrowser/catppuccin"]
 	path = .config/qutebrowser/catppuccin
 	url = https://github.com/catppuccin/qutebrowser
+[submodule ".config/nvim"]
+	path = .config/nvim
+	url = https://github.com/AstroNvim/AstroNvim
