[Neovim] Update and clean up config
Remove some cruft, commit some new plugins.

Most plugin keybindings moved to `plugins/user.lua` rather than
`mappings.lua`.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@
 
 #font_family	mononoki
 #font_family	Iosevka Term
-font_family	Hack Nerd Font Mono
+font_family	Hack Nerd Font
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -175,7 +175,7 @@ font_size 14.0
 
 #: Defines the thickness of the underline cursor (in pts)
 
-# cursor_blink_interval -1
+cursor_blink_interval 0
 
 #: The interval (in seconds) at which to blink the cursor. Set to zero
 #: to disable blinking. Negative values mean use system default. Note
