--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1402,3 +1402,18 @@ map cmd+n      no_op
 
 # }}}
 
+# Begin vim-kitty-navigator section
+# https://github.com/knubie/vim-kitty-navigator
+map ctrl+j kitten pass_keys.py bottom ctrl+j
+map ctrl+k kitten pass_keys.py top    ctrl+k
+map ctrl+h kitten pass_keys.py left   ctrl+h
+map ctrl+l kitten pass_keys.py right  ctrl+l
+
+# For linux only:
+# allow_remote_control yes
+# listen_on unix:@mykitty
+
+# Other unix systems:
+allow_remote_control yes
+listen_on unix:/tmp/mykitty
+# End vim-kitty-navigator section
