--- a/mac/.skhdrc
+++ b/mac/.skhdrc
@@ -107,7 +107,7 @@
 
 # open terminal, blazingly fast compared to iTerm/Hyper
 cmd - return : /Applications/kitty.app/Contents/MacOS/kitty --single-instance -d ~
-cmd + alt - return : open /Applications/Brave\ Browser.app
+cmd + alt - return : open /Applications/Firefox\ Developer \Edition.app
 
 # Navigation
 alt - h : yabai -m window --focus west
@@ -243,6 +243,18 @@ shift + lctrl + alt - f : yabai -m window --toggle float
 # Make window native fullscreen
 alt - f         : yabai -m window --toggle zoom-fullscreen
 shift + alt - f : yabai -m window --toggle native-fullscreen
+
+### Swap/move window
+#   (options: north, east, south, west)
+alt + shift - h : yabai -m window --swap west  || $(yabai -m window --display west; yabai -m display --focus west)
+alt + shift - j : yabai -m window --swap south || $(yabai -m window --display south; yabai -m display --focus south)
+alt + shift - k : yabai -m window --swap north || $(yabai -m window --display north; yabai -m display --focus north)
+alt + shift - l : yabai -m window --swap east  || $(yabai -m window --display east; yabai -m display --focus east)
+# alternatively, use the arrow keys
+alt + shift - left : yabai -m window --swap west  || $(yabai -m window --display west; yabai -m display --focus west)
+alt + shift - down : yabai -m window --swap south || $(yabai -m window --display south; yabai -m display --focus south)
+alt + shift - up : yabai -m window --swap north   || $(yabai -m window --display north; yabai -m display --focus north)
+alt + shift - right : yabai -m window --swap east || $(yabai -m window --display east; yabai -m display --focus east)
 
 # ############################################################### #
 # THE FOLLOWING SECTION CONTAIN SIMPLE MAPPINGS DEMONSTRATING HOW #
