--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -23,15 +23,17 @@ green = #a6da95
 teal = #8bd5ca
 sky = #91d7e3
 sapphire = #7dc4e4
-blue = #8aaadf4
+blue = #8aadf4
 lavender = #b7bdf8
 red = #ed8796
 maroon = #ee99a0
 mauve = #c6a0f6
 pink = #f5bde6
 flamingo = #f0c6c6
-background = #24273a
-background-alt = #494d64
+background = #3c3836
+; background = #24273a
+background-alt = #5b534d
+; background-alt = #494d64
 
 [bar/main]
 width = 100%
@@ -56,11 +58,12 @@ module-margin = 1
 #separator = |
 #separator-foreground = ${colors.sky}
 
-font-0 = Hack Nerd Font Mono;2
-font-1 = FontAwesome:size=10
+font-0 = Hack;2
+font-2 = Hack Nerd Font Mono;2:size=10
+font-1 = FontAwesome;2:size=10
 
 modules-left = xworkspaces xwindow
-modules-right = nowplaying filesystem pulseaudio memory cpu wlan eth date
+modules-right = nowplaying filesystem pulseaudio memory cpu wlan eth date powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -129,7 +132,7 @@ label-unmounted-foreground = ${colors.background-alt}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = " "
+format-volume-prefix = " "
 format-volume-prefix-foreground = ${colors.peach}
 format-volume = <label-volume>
 format-volume-foreground = ${colors.peach}
@@ -150,7 +153,7 @@ label-foreground = ${colors.teal}
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "龍"
+format-prefix = " "
 format-prefix-foreground = ${colors.sky}
 label = %percentage:2%%
 label-foreground = ${colors.sky}
@@ -172,8 +175,8 @@ label-disconnected =  Disconnected
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected =  %local_ip%
-label-disconnected =  Disconnected
+label-connected =  %local_ip%
+label-disconnected =  Disconnected
 
 [module/date]
 type = internal/date
@@ -184,6 +187,38 @@ date-alt = %Y-%m-%d %H:%M:%S
 
 label =  %date%
 label-foreground = ${colors.pink}
+
+[module/powermenu]
+type = custom/menu
+
+expand-right = false
+
+format-spacing = 1
+
+label-open = ⚡
+label-open-foreground = ${colors.sky}
+label-close = 
+label-close-foreground = ${colors.green}
+label-separator = |
+label-separator-foreground = ${colors.background-alt}
+
+menu-0-0 = logout
+menu-0-0-foreground = ${colors.teal}
+menu-0-0-exec = qdbus org.kde.ksmserver /KSMServer logout 0 0 1
+menu-0-1 = reboot
+menu-0-1-foreground = ${colors.pink}
+menu-0-1-exec = menu-open-1
+menu-0-2 = shutdown
+menu-0-2-foreground = ${colors.red}
+menu-0-2-exec = menu-open-2
+
+menu-1-0 = confirm
+menu-1-0-foreground = ${colors.red}
+menu-1-0-exec = loginctl reboot
+
+menu-2-0 = confirm
+menu-2-0-foreground = ${colors.red}
+menu-2-0-exec = loginctl poweroff
 
 [settings]
 screenchange-reload = true
