[mac] Push latest config
Begun using `gum` in scripts

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -881,7 +881,7 @@ color15 #fbf1c7
 
 #: The value of MYVAR2 will be a/<path to home directory>/b.
 
-# update_check_interval 24
+update_check_interval 0
 
 #: Periodically check if an update to kitty is available. If an update
 #: is found a system notification is displayed informing you of the
@@ -960,7 +960,7 @@ color15 #fbf1c7
 
 #: Hide the kitty window from running tasks (Option+Tab) on macOS.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 
 #: Have kitty quit when all the top-level windows are closed. By
 #: default, kitty will stay running, even with no open windows, as is
