--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -52,7 +52,7 @@ layerrule = match:namespace vicinae, no_anim on
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = mako & waybar & hyprpaper & hypersunset & vicinae server &
+exec-once = mako & waybar & vicinae server &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
