--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,6 @@
-preload = /home/alex/Pictures/wallpapers/great-wave-of-kanagawa-gruvbox.png
-wallpaper = , /home/alex/Pictures/wallpapers/great-wave-of-kanagawa-gruvbox.png
+splash = false
+wallpaper {
+    monitor = DP-1
+    path = /home/alex/Pictures/wallpapers/great-wave-of-kanagawa-gruvbox.png
+    fit_mode = cover
+}
